--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Jornada">
+<meta name="theme-color" content="#00e5a0">
+<link rel="manifest" href="manifest.json">
+<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+<link rel="apple-touch-icon" href="icon-512.png">
 <title>Registro de Jornada</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&family=Syne:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -521,7 +526,7 @@
     <div style="height:8px"></div>
     <div class="tabs" style="margin: 0 20px;">
       <button class="tab active" onclick="switchTab('inicio')" id="tab-inicio">
-        <span>🏠</span> Jornada
+        <span>⏱️</span> Jornada
       </button>
       <button class="tab" onclick="switchTab('novedades')" id="tab-novedades">
         <span>📝</span> Novedades
