--- a/index.html
+++ b/index.html
@@ -1388,6 +1388,8 @@ document.addEventListener('DOMContentLoaded', function() {
     abrirPerfil();
   });
   init();
+});
+</script>
 
 </body>
 </html>
